--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -7,6 +7,7 @@
     background-color: black;
     color: white;
     background-image: linear-gradient(to top left , #333,#000);
+    padding: 3rem 1rem;
     /* flex-wrap: wrap; */
 }
 .landing_info , .link_cont{
@@ -28,6 +29,8 @@
     line-height: 1.5rem;
 }
 .link_cont{
+    max-width: 25rem;
+    width: 100%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 255, 255, 0.507);
     height: 50vh;
@@ -70,7 +73,7 @@
     width:40px;
     position: absolute;
     top: 3%;
-    left: 1%;
+    left: 0;
 
 }
 @media screen and (max-width:800px) {
@@ -79,6 +82,11 @@
     }
 }
 .body{
-
     background-color: black;
+}
+
+@media screen and (max-width:425px) {
+    .landing_info h1{
+        font-size: 2.5rem;
+    }
 }
